--- a/style.css
+++ b/style.css
@@ -1,19 +1,31 @@
 @media(max-width:600px) {
-    h1{
-        border:5px solid blue;
-    }
-}
-@media(min-width:600px) {
     h1 {
-        border-bottom: 1px solid purple;
+        border-bottom: 5px solid maroon;
         padding: 10px;
         margin-bottom: 0;
     }
 
     ol {
-        border-right: 4px solid tomato;
+        border-right: 4px dotted brown;
         width: 150px;
-        margin-top: 0;
+        margin-top: 10;
+    }
+    #container {
+        display: grid;
+        grid-template-columns: 250px 1fr;
+    }
+}
+@media(min-width:600px) {
+    h1 {
+        border-bottom: 5px solid maroon;
+        padding: 10px;
+        margin-bottom: 0;
+    }
+
+    ol {
+        border-right: 4px dotted brown;
+        width: 150px;
+        margin-top: 10;
     }
 
     #container {
